Update GitHub Actions workflow for scraping
Refactor GitHub Actions workflow to streamline dependency installation and scraper execution.

--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -3,7 +3,7 @@ name: Scrape DCC Pitches
 on:
   schedule:
     - cron: '0 8 * * *'  # Daily 8AM GMT
-  workflow_dispatch:     # Manual trigger
+  workflow_dispatch:
 
 jobs:
   scrape:
@@ -14,21 +14,19 @@ jobs:
       uses: actions/checkout@v4
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
-        fetch-depth: 0  # For git history
+        fetch-depth: 0
       
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
         python-version: '3.11'
         
-    - name: Install dependencies
+    - name: Install dependencies & run scraper
       run: |
         python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        pip install requests beautifulsoup4 lxml
+        python pitch_scraper.py
         
-    - name: Run scraper
-      run: python pitch_scraper.py
-      
     - name: Show preview
       run: |
         echo "## Latest Results" >> $GITHUB_STEP_SUMMARY
@@ -42,5 +40,7 @@ jobs:
         git config --local user.name "github-actions[bot]"
         git add dcc_pitches.json
         timestamp=$(date -u +'%Y-%m-%d %H:%M UTC')
-        git commit -m "Update pitches JSON: ${timestamp} (PLAYABLE: $(jq '[.pitches[] | select(.playable)] | length')/$(jq '.pitches | length')" || exit 0
+        playable=$(jq '[.pitches[] | select(.playable)] | length' dcc_pitches.json)
+        total=$(jq '.pitches | length' dcc_pitches.json)
+        git commit -m "Update pitches JSON: ${timestamp} (PLAYABLE: ${playable}/${total})" || exit 0
         git push
