--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -2,7 +2,7 @@ name: Scrape DCC Pitches
 
 on:
   schedule:
-    - cron: '0 8 * * *'  # Daily 8AM GMT
+    - cron: '0 8 * * *'  # Daily 8AM UTC
   workflow_dispatch:
 
 jobs:
