--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -1,4 +1,4 @@
-name: Scrape DCC & Fingal Pitches
+name: Scrape Dublin Pitches (DCC+Fingal+DLR)
 
 on:
   schedule:
@@ -27,10 +27,12 @@ jobs:
         pip install requests beautifulsoup4 lxml
         python pitch_scraper_dcc.py
         python pitch_scraper_fingal.py
+        python pitch_scraper_dlr.py
         
     - name: Commit data folder
       uses: EndBug/add-and-commit@v9
       with:
         add: 'data/'
         message: |
-          Update pitches data: ${{ github.run_id }} - Scrapers completed successfully
+          Update pitches: ${{ github.run_id }}
+          DCC+Fingal+DLR (${{ github.run_number }})
